--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="shortcut icon" type="image/png"href="images/search-icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>iddink</title>
 </head>
 
